# pythonLT8

./: README.md  build.sh  docker-compose.yml  index.md  package-lock.json  package.json
demo/: .gitignore  Dockerfile  Dockerfile-show  README.md  pyproject.toml  tox.ini
demo/data/: demo.xml
demo/src/: .env  audio_convertor.py  main.py
img/: 49139020
